app/src/main/cpp/windows/windef.h

typedef void                                   *LPVOID;
/* Polymorphic types */

typedef UINT_PTR        WPARAM;
typedef LONG_PTR        LPARAM;
typedef LONG_PTR        LRESULT;
/* Integer types */

typedef WORD            ATOM;
/* Handle types that must remain interchangeable even with strict on */

typedef HINSTANCE HMODULE;
typedef HICON HCURSOR;
#define MAX_PATH        260
/* The SIZE structure */
typedef struct tagSIZE
{
    LONG cx;
    LONG cy;
} SIZE, *PSIZE, *LPSIZE;
/* The POINT structure */
typedef struct tagPOINT
{
    LONG  x;
    LONG  y;
} POINT, *PPOINT, *LPPOINT;
/* The RECT structure */
typedef struct tagRECT
{
    LONG left;
    LONG top;
    LONG right;
    LONG bottom;
} RECT, *PRECT, *LPRECT;